Geolocation at start added

--- a/src/components/TinderCards/TinderCards.css
+++ b/src/components/TinderCards/TinderCards.css
@@ -48,3 +48,9 @@
 input:focus {
   outline: none;
 }
+
+.tinderCards__spinner {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20vh;
+}
