--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,8 +8,10 @@
 .header__logo {
   height: 40px;
   object-fit: contain;
+  box-sizing: initial !important;
 }
 
 .header__icon {
   padding: 20px;
+  box-sizing: initial !important;
 }
